Hide and show Medium Audio

--- a/index.html
+++ b/index.html
@@ -448,6 +448,8 @@ $(window).load(function(){
 			$("#mediumBannerOwnSourceCodes").hide() &&
 			$("#mediumVideo").show() &&
 			$("#mediumVideoOwnSourceCodes").show() &&
+			$("#mediumAudio").hide() &&
+			$("#mediumAudioOwnSourceCodes").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
@@ -468,6 +470,8 @@ $(window).load(function(){
 			$("#mediumBannerOwnSourceCodes").hide() &&
 			$("#mediumVideo").show() &&
 			$("#mediumVideoOwnSourceCodes").hide() &&
+			$("#mediumAudio").hide() &&
+			$("#mediumAudioOwnSourceCodes").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
@@ -530,6 +534,7 @@ $(window).load(function(){
 			$("#mediumSocialAd").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").show() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
@@ -547,6 +552,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").show() &&
@@ -566,6 +572,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").show() &&
@@ -585,6 +592,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -603,6 +611,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -621,6 +630,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -639,6 +649,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -657,6 +668,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -675,6 +687,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
@@ -692,6 +705,7 @@ $(window).load(function(){
 			$("#mediumOrganicSearch").hide() &&
 			$("#mediumBanner").hide() &&
 			$("#mediumVideo").hide() &&
+			$("#mediumAudio").hide() &&
 			$("#mediumEmail").hide() &&
 			$("#mediumSocialAd").hide() &&
 			$("#mediumSocialPost").hide() &&
